--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: lazzarello/test-docker-action
+        uses: lazzarello/test-docker-action@v1
         with:
           who-to-greet: 'Mona the Octocat'
       - name: Get the output time
